k8s/manhattan-wired.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manhattan-wired
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manhattan-wired
  template:
    metadata:
      labels:
        app: manhattan-wired
    spec:
      containers:
      - name: manhattan
        image: bettercallshao/manhattan:latest
        imagePullPolicy: Always
