k8s/manhattan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manhattan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manhattan
  template:
    metadata:
      labels:
        app: manhattan
    spec:
      containers:
      - name: manhattan
        image: bettercallshao/manhattan:latest
        imagePullPolicy: Always
