k8s/deluxe.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluxe
  labels:
    app: deluxe
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: deluxe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluxe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluxe
  template:
    metadata:
      labels:
        app: deluxe
    spec:
      containers:
      - name: deluxe
        image: bettercallshao/deluxe:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
